--- a/app/views/main.html
+++ b/app/views/main.html
@@ -10,7 +10,8 @@
                 <h3 class="panel-title">Packets</h3>
             </div>
             <div class="panel-body">
-                <div ui-grid="{ data:  packetCtrl.packets}" class="packets"></div>
+                <!--<div ui-grid="{ data:  packetCtrl.packets}" class="packets"></div>-->
+                <p ng-bind="packetCtrl.packets"></p>
             </div>
         </div>
     </div>
