--- a/app/views/main.html
+++ b/app/views/main.html
@@ -7,11 +7,11 @@
     <div class="col-md-12" ng-controller="PacketCtrl as packetCtrl">
         <div class="panel panel-default">
             <div class="panel-heading">
-                <h3 class="panel-title">Packets</h3>
+                <h3 class="panel-title">Packetss</h3>
             </div>
             <div class="panel-body">
-                <!--<div ui-grid="{ data:  packetCtrl.packets}" class="packets"></div>-->
-                <p ng-bind="packetCtrl.packets"></p>
+                <div ui-grid="{ data:  packetCtrl.packets}" class="packets"></div>
+                <p ng-bind="packetCtrl.packets.lastPacketId"></p>
             </div>
         </div>
     </div>
