--- a/app/views/main.html
+++ b/app/views/main.html
@@ -4,10 +4,33 @@
   </div>
 </div>
 <div class="row">
+    <div class="col-md-12" ng-controller="ControllerCtrl as controllerCtrl">
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <h3 class="panel-title">Controllers</h3>
+            </div>
+            <div class="panel-body">
+                <div class="col-md-6 controllerPanel" ng-repeat="ctrl in controllerCtrl.controllers">
+                    <div class="row">
+                        <div class="col-md-12">
+                            <ul class="list-inline">
+                                <li>IP: <span>{{ctrl.ip}}</span></li>
+                                <li>status: <span>{{ctrl.status}}</span></li>
+                            </ul>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+
+    </div>
+</div>
+<div class="row">
     <div class="col-md-12" ng-controller="PacketCtrl as packetCtrl">
         <div class="panel panel-default">
             <div class="panel-heading">
-                <h3 class="panel-title">Packetss</h3>
+                <h3 class="panel-title">Packets</h3>
             </div>
             <div class="panel-body">
                 <div ui-grid="{ data:  packetCtrl.packets}" class="packets"></div>
