--- a/app/views/sendPacket.html
+++ b/app/views/sendPacket.html
@@ -1,55 +1,89 @@
 <div class="row">
-    <div class="col-md-12">
-        <p>{{sendPacket.packet.type}}</p>
-        <p> {{sendPacket.packet.srcShortAdd}}</p>
+    <div class="col-md-3">
 
     </div>
+    <div class="col-md-6">
 
-    <form class="form" role="form" ng-submit="sendPacket.postPacket()">
-        <div class="col-md-6">
-            <div class="form-group">
-                <label for="packetType">Type</label>
-                <select name="type" id="packetType" class="form-control" ng-model="sendPacket.packet.type">
-                    <option value="DATA">DATA</option>
-                    <option value="OPEN_PATH">OPEN_PATH</option>
-                </select>
-            </div>
+        <form class="form" role="form" ng-submit="sendPacket.sendPacket()">
+            <!--First row general form info-->
+            <div class="row">
 
-            <div class="form-group">
-                <label for="srcAdd">Source Address:</label>
-                <input type="text" id="srcAdd" class="form-control" ng-model="sendPacket.packet.srcShortAdd">
-            </div>
+                <div class="col-md-12">
+                    <div class="form-group">
+                        <label for="numOfQueries">Number of queries</label>
+                        <input type="text" class="form-control" ng-model="sendPacket.status.numOfQueries"
+                               id="numOfQueries">
+                    </div>
+                    <div class="form-group">
+                        <label for="delay">Delay in ms</label>
+                        <input type="text" class="form-control" ng-model="sendPacket.status.delay"
+                               id="delay">
+                    </div>
+                </div>
 
-            <div class="form-group">
-                <label for="ctrlIpTo">To:</label>
-                <select class="form-control" id="ctrlIpTo" ng-model="sendPacket.packet.dstIp">
-                    <option value="{{ctrl.ip}}" ng-repeat="ctrl in sendPacket.controllers">{{ctrl.ip}}</option>
-                </select>
             </div>
-        </div>
+            <!--second row packet-->
+            <div class="row">
 
-        <div class="col-md-6">
-            <div class="form-group">
-                <label for="payloadLen">Payload Length:</label>
-                <input type="text" id="payloadLen" class="form-control" ng-model="sendPacket.payloadLen">
-            </div>
+                <div class="col-md-6">
+                    <div class="form-group">
+                        <label for="packetType">Type</label>
+                        <select name="type" id="packetType" class="form-control"
+                                ng-model="sendPacket.packet.type">
+                            <option value="DATA">DATA</option>
+                            <option value="OPEN_PATH">OPEN_PATH</option>
+                        </select>
+                    </div>
 
-            <div class="form-group">
-                <label for="dstAdd">Destination Address:</label>
-                <input type="text" id="dstAdd" class="form-control" ng-model="sendPacket.packet.dstShortAdd">
-            </div>
-            <div class="form-group">
-                <label for="ctrlIpFrom">From:</label>
-                <select class="form-control" id="ctrlIpFrom" ng-model="sendPacket.packet.srcIp">
-                    <option value="{{ctrl.ip}}" ng-repeat="ctrl in sendPacket.controllers">
-                        {{ctrl.ip}}
-                    </option>
-                </select>
-            </div>
+                    <div class="form-group">
+                        <label for="srcAdd">Source Address:</label>
+                        <input type="text" id="srcAdd" class="form-control"
+                               ng-model="sendPacket.packet.srcShortAdd">
+                    </div>
 
-            <div class="form-group">
-                <input type="submit" value="Send" class="btn btn-primary"/>
+                    <div class="form-group">
+                        <label for="ctrlIpTo">To:</label>
+                        <select class="form-control" id="ctrlIpTo" ng-model="sendPacket.packet.dstIp">
+                            <option value="{{ctrl.ip}}" ng-repeat="ctrl in sendPacket.controllers">
+                                {{ctrl.ip}}
+                            </option>
+                        </select>
+                    </div>
+
+                </div>
+
+                <div class="col-md-6">
+                    <div class="form-group">
+                        <label for="payloadLen">Payload Length:</label>
+                        <input type="text" id="payloadLen" class="form-control"
+                               ng-model="sendPacket.payloadLen">
+                    </div>
+
+                    <div class="form-group">
+                        <label for="dstAdd">Destination Address:</label>
+                        <input type="text" id="dstAdd" class="form-control"
+                               ng-model="sendPacket.packet.dstShortAdd">
+                    </div>
+                    <div class="form-group">
+                        <label for="ctrlIpFrom">From:</label>
+                        <select class="form-control" id="ctrlIpFrom" ng-model="sendPacket.packet.srcIp">
+                            <option value="{{ctrl.ip}}" ng-repeat="ctrl in sendPacket.controllers">
+                                {{ctrl.ip}}
+                            </option>
+                        </select>
+                    </div>
+
+                    <div class="form-group">
+                        <input type="submit" value="Send" class="btn btn-primary"/>
+                    </div>
+
+                </div>
+
             </div>
-        </div>
-    </form>
+        </form>
+    </div>
+    <div class="col-md-3">
+
+    </div>
 </div>
+
