--- a/app/views/sendPacket.html
+++ b/app/views/sendPacket.html
@@ -11,12 +11,12 @@
                 <div class="col-md-12">
                     <div class="form-group">
                         <label for="numOfQueries">Number of queries</label>
-                        <input type="text" class="form-control" ng-model="sendPacket.status.numOfQueries"
+                        <input type="text" class="form-control" ng-model="sendPacket.query.numOfQueries"
                                id="numOfQueries">
                     </div>
                     <div class="form-group">
                         <label for="delay">Delay in ms</label>
-                        <input type="text" class="form-control" ng-model="sendPacket.status.delay"
+                        <input type="text" class="form-control" ng-model="sendPacket.query.delay"
                                id="delay">
                     </div>
                 </div>
